--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,13 +8,13 @@
     %script{:src => "/js/ui.js"}
     %script{:src => "/js/processing.min.js"} 
 
-    %title JRubyConf.EU Connection Neovigator
+    %title GraphConnect Connection Neovigator
 
   %body
     %canvas#neoviz
     %header
       %section#title
-        %h1 JRubyConf.EU Connection Neovigator
+        %h1 GraphConnect Connection Neovigator
         %p RFID Tag Graph Browser
       %section#search
         %form{:action => "/", :method => "get"}
@@ -30,7 +30,7 @@
         %h2 About
         %p
           This Neo4j database contains the TALK-relationships from the RFID tagging of 
-          %a{:href => "https://JRubyConf.EU", :target=>"_blank"} JRubyConf.EU
+          %a{:href => "https://graphconnect.com", :target=>"_blank"} GraphConnect
         %p
           Neovigator is an attempt to visually navigate through 
           %a{:href => "http://neo4j.org"} Neo4j 
